--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,7 @@ jobs:
         run: make build
       - name: Lint
         id: Lint
+        uses: golangci/golangci-lint-action@v6.1.0
         run: make lint
       - name: Test
         id: Test
