--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: Brahma GO-SAFE CI
 
 on:
+  push:
+    branches:
+        - 'main'
   pull_request:
     paths-ignore: [ README.md, .github/workflows/*.yml ]
     branches:
